Use GitHub Pages data instead of baseurl

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <a href="https://wearetuple.co">
-    <img class="site-logo" src="{{ site.baseurl }}/public/images/tuple-logo.svg" alt="Logo" />
+    <img class="site-logo" src="{{ site.github.url }}/public/images/tuple-logo.svg" alt="Tuple" />
   </a>
   <p class="site-tagline">
     Presentations and talks by the Tuple team.
